711-settings-button-disabled-until-file-is-opened (#714)
* Refactor MapView to integrate settings container into toolbar layout

* Revert "Refactor MapView to integrate settings container into toolbar layout"

This reverts commit 341f6ac913c2a75e5398c32633473fa13146c24f.

* Refactor tool node handling to use ToolNodes structure for better file dependency management

* Add a new line for improved code readability in MapView.java

* Introduce ToolNode and ActivationPolicy for improved tool activation management

* Update ToolNode activation policy to enable button only when a file is selected