@@ -1,9 +1,10 @@
 package com.ugcs.geohammer;
 
-import java.util.Arrays;
 import java.util.List;
 
 import com.ugcs.geohammer.chart.Chart;
+import com.ugcs.geohammer.model.ActivationPolicy;
+import com.ugcs.geohammer.model.ToolNode;
 import com.ugcs.geohammer.model.event.FileSelectedEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.stereotype.Component;
@@ -13,7 +14,6 @@ import com.ugcs.geohammer.format.SgyFile;
 import com.ugcs.geohammer.model.ToolProducer;
 import com.ugcs.geohammer.model.Model;
 
-import javafx.scene.Node;
 import javafx.scene.control.Button;
 import javafx.scene.control.Tooltip;
 
@@ -28,31 +28,23 @@ public class Navigator implements ToolProducer {
 	}
 
 	@Override
-	public List<Node> getToolNodes() {
+	public List<ToolNode> getToolNodes() {
 		Button backBtn = ResourceImageHolder.setButtonImage(ResourceImageHolder.ARROW_LEFT, new Button());
-		//new Button("", ResourceImageHolder.getImageView("arrow_left_20.png"));
 		Button fitBtn = ResourceImageHolder.setButtonImage(ResourceImageHolder.FIT, new Button());
-		//new Button("", ResourceImageHolder.getImageView("fit_20.png"));		
 		Button nextBtn = ResourceImageHolder.setButtonImage(ResourceImageHolder.ARROW_RIGHT, new Button());
-		//new Button("", ResourceImageHolder.getImageView("arrow_right_20.png"));
-		
+
 		backBtn.setTooltip(new Tooltip("Fit previous line to window"));
 		fitBtn.setTooltip(new Tooltip("Fit current line to window"));
 		nextBtn.setTooltip(new Tooltip("Fit next line to window"));
-		
-		fitBtn.setOnAction(e -> {
-			fitCurrent();
-		});
 
-		backBtn.setOnAction(e -> {
-			fitBack();
-		});
+		fitBtn.setOnAction(e -> fitCurrent());
+		backBtn.setOnAction(e -> fitBack());
+		nextBtn.setOnAction(e -> fitNext());
 
-		nextBtn.setOnAction(e -> {
-			fitNext();
-		});
-		
-		return Arrays.asList(backBtn, fitBtn, nextBtn);
+		return List.of(
+				new ToolNode(backBtn, ActivationPolicy.fileSelected()),
+				new ToolNode(fitBtn, ActivationPolicy.fileSelected()),
+				new ToolNode(nextBtn, ActivationPolicy.fileSelected()));
 	}
 
 	public void fitNext() {
