@@ -5,7 +5,6 @@ import java.awt.Graphics2D;
 import java.awt.image.BufferedImage;
 import java.io.Closeable;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 import com.ugcs.geohammer.map.RenderQueue;
@@ -13,6 +12,8 @@ import com.ugcs.geohammer.map.provider.GoogleTileProvider;
 import com.ugcs.geohammer.map.provider.HereMapProvider;
 import com.ugcs.geohammer.map.provider.OsmTileProvider;
 import com.ugcs.geohammer.map.provider.XyzMapProvider;
+import com.ugcs.geohammer.model.ActivationPolicy;
+import com.ugcs.geohammer.model.ToolNode;
 import com.ugcs.geohammer.model.event.FileOpenedEvent;
 import com.ugcs.geohammer.model.event.WhatChanged;
 import com.ugcs.geohammer.BuildInfo;
@@ -33,7 +34,6 @@ import com.ugcs.geohammer.view.ResourceImageHolder;
 import com.ugcs.geohammer.view.status.Status;
 import com.ugcs.geohammer.model.Model;
 
-import javafx.scene.Node;
 import javafx.scene.control.ToggleGroup;
 import javafx.scene.layout.HBox;
 
@@ -243,9 +243,11 @@ public class SatelliteMap extends BaseLayer implements InitializingBean {
 	}
 
 	@Override
-	public List<Node> getToolNodes() {
-		HBox cnt = new HBox(/*showLayerCheckbox,*/ optionsMenuBtn);
-		return Arrays.asList(cnt);
+	public List<ToolNode> getToolNodes() {
+		HBox cnt = new HBox(optionsMenuBtn);
+		return List.of(
+				new ToolNode(cnt, ActivationPolicy.fileSelected())
+		);
 	}
 
 }
